#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: andy-20101208-02
2010-12-08 Andrei Salnikov
- added "use" directive to import types from other files

Tag: andy-20101208-01
2010-12-08 Andrei Salnikov
- further development, introduced namespaces/lookup

Tag: andy-20101027-01
2010-10-27 Andrei Salnikov
- First version with very limited functionality, development tag.